Uniform script settings for all domains (use "chrome.storage" instead of "localstorage"); change a language without reloading page.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "parkrun Extended Info",
   "short_name": "parkrunExInf",
-  "version": "2018.9.25.0",
+  "version": "2018.9.26.0",
   "author": "seriych",
 
   "default_locale": "en",
@@ -20,5 +20,8 @@
       "run_at": "document_idle",
       "js": [ "parkrunExtendedInfo.js" ]
     }
+  ],
+  "permissions": [
+    "storage"
   ]
 }
