More precise parkrun sites detection (work only on parkrun sites).

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "parkrun Extended Info",
   "short_name": "parkrunExInf",
-  "version": "2019.1.20.0",
+  "version": "2019.3.2.0",
   "author": "seriych",
 
   "default_locale": "en",
@@ -25,8 +25,82 @@
   ],
   "content_scripts": [
     {
-      "matches": [ "*://*/*" ],
-      "include_globs": ["*parkrun.??*/?*"],
+      "matches": [
+        "http://www.parkrun.ca/*",
+        "https://www.parkrun.ca/*",
+        "http://www.parkrun.co.nz/*",
+        "https://www.parkrun.co.nz/*",
+        "http://www.parkrun.co.za/*",
+        "https://www.parkrun.co.za/*",
+        "http://www.parkrun.com.au/*",
+        "https://www.parkrun.com.au/*",
+        "http://www.parkrun.com.de/*",
+        "https://www.parkrun.com.de/*",
+        "http://www.parkrun.dk/*",
+        "https://www.parkrun.dk/*",
+        "http://www.parkrun.fi/*",
+        "https://www.parkrun.fi/*",
+        "http://www.parkrun.fr/*",
+        "https://www.parkrun.fr/*",
+        "http://www.parkrun.ie/*",
+        "https://www.parkrun.ie/*",
+        "http://www.parkrun.it/*",
+        "https://www.parkrun.it/*",
+        "http://www.parkrun.my/*",
+        "https://www.parkrun.my/*",
+        "http://www.parkrun.no/*",
+        "https://www.parkrun.no/*",
+        "http://www.parkrun.org.uk/*",
+        "https://www.parkrun.org.uk/*",
+        "http://www.parkrun.pl/*",
+        "https://www.parkrun.pl/*",
+        "http://www.parkrun.ru/*",
+        "https://www.parkrun.ru/*",
+        "http://www.parkrun.se/*",
+        "https://www.parkrun.se/*",
+        "http://www.parkrun.sg/*",
+        "https://www.parkrun.sg/*",
+        "http://www.parkrun.us/*",
+        "https://www.parkrun.us/*"
+      ],
+      "include_globs": [
+        "http://www.parkrun.ca/*",
+        "https://www.parkrun.ca/*",
+        "http://www.parkrun.co.nz/*",
+        "https://www.parkrun.co.nz/*",
+        "http://www.parkrun.co.za/*",
+        "https://www.parkrun.co.za/*",
+        "http://www.parkrun.com.au/*",
+        "https://www.parkrun.com.au/*",
+        "http://www.parkrun.com.de/*",
+        "https://www.parkrun.com.de/*",
+        "http://www.parkrun.dk/*",
+        "https://www.parkrun.dk/*",
+        "http://www.parkrun.fi/*",
+        "https://www.parkrun.fi/*",
+        "http://www.parkrun.fr/*",
+        "https://www.parkrun.fr/*",
+        "http://www.parkrun.ie/*",
+        "https://www.parkrun.ie/*",
+        "http://www.parkrun.it/*",
+        "https://www.parkrun.it/*",
+        "http://www.parkrun.my/*",
+        "https://www.parkrun.my/*",
+        "http://www.parkrun.no/*",
+        "https://www.parkrun.no/*",
+        "http://www.parkrun.org.uk/*",
+        "https://www.parkrun.org.uk/*",
+        "http://www.parkrun.pl/*",
+        "https://www.parkrun.pl/*",
+        "http://www.parkrun.ru/*",
+        "https://www.parkrun.ru/*",
+        "http://www.parkrun.se/*",
+        "https://www.parkrun.se/*",
+        "http://www.parkrun.sg/*",
+        "https://www.parkrun.sg/*",
+        "http://www.parkrun.us/*",
+        "https://www.parkrun.us/*"
+      ],
       "run_at": "document_idle",
       "js": [ "parkrunExtendedInfo.js" ]
     }
