--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "parkrun Extended Info",
   "short_name": "parkrunExInf",
-  "version": "2019.7.29.0",
+  "version": "2019.8.5.0",
   "author": "seriych",
 
   "default_locale": "en",
@@ -111,7 +111,7 @@
         "https://www.parkrun.us/*"
       ],
       "run_at": "document_idle",
-      "js": [ "parkrunExtendedInfo.js" ]
+      "js": [ "localization.js", "parkrunExtendedInfo.js" ]
     }
   ],
   "permissions": [
